# gimp-rs

./: .gitignore  .gitmodules  Babl-0.1.gir  Cargo.toml  Gegl-0.4.gir  Gimp-3.0.gir  README.md  build.rs  wrapper.h
.github/workflows/: docs.yaml
gimp/: Cargo.toml  Gir.toml  docs.md
gimp/macros/: Cargo.toml
gimp/macros/src/: lib.rs
gimp/src/: image_procedure.rs  lib.rs  macros.rs  prelude.rs  procedure.rs  vector2.rs  vector3.rs
gimp/src/auto/: alias.rs  array.rs  brush.rs  channel.rs  choice.rs  color_config.rs  color_managed.rs  color_profile.rs  color_transform.rs  config_writer.rs  constants.rs  display.rs  drawable.rs  drawable_filter.rs  drawable_filter_config.rs  enums.rs  export_options.rs  file_procedure.rs  flags.rs  font.rs  functions.rs  gradient.rs  group_layer.rs  image.rs  image_procedure.rs  item.rs  layer.rs  layer_mask.rs  load_procedure.rs  matrix2.rs  matrix3.rs  metadata.rs  mod.rs  module.rs  module_db.rs  palette.rs  parasite.rs  path.rs  pattern.rs  pdb.rs  (+11 more)
gimp/src/subclass/: mod.rs  plug_in.rs
gimp/sys/: Cargo.toml  Gir.toml
gimp/sys/src/: lib.rs
gimp/sys/src/auto/: versions.txt
gimp/sys/tests/: abi.rs  constant.c  layout.c  manual.h
src/: lib.rs
