[package]
name = "gimp"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "2.2"
glib = "0.20.7"
gio = "0.20.7"
gdk-pixbuf = "0.20.7"
cairo-rs = "0.20.7"
pango = "0.20.7"

glib-sys = "0.20.7"

gobject-sys = "0.20.7"
gio-sys = "0.20.8"
gdk-pixbuf-sys = "0.20.7"
cairo-sys-rs = "0.20.7"
pango-sys = "0.20.7"

[dependencies.gegl]
path = "/home/jonas/devel/rust/gegl-rs/gegl"

[dependencies.babl]
path = "/home/jonas/devel/rust/babl-rs/babl"

[dependencies.gegl-sys]
path = "/home/jonas/devel/rust/gegl-rs/gegl/sys"

[dependencies.babl-sys]
path = "/home/jonas/devel/rust/babl-rs/babl/sys"

[dependencies.ffi]
package = "gimp-sys"
path = "./sys"

[dependencies.gimp-macros]
path = "macros"
