[package]
name = "gimp-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.gimp_3_0]
name = "gimp-3.0"
version = "3"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "gimp_sys"

[dependencies]
libc = "0.2"
glib-sys = "0.20.7"
gobject-sys = "0.20.7"
gio-sys = "0.20.8"
babl-sys = "0.1.1"
gdk-pixbuf-sys = "0.20.7"
gegl-sys = "0.2.0"
cairo-sys-rs = "0.20.7"
pango-sys = "0.20.7"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
